<resources>
    <string name="app_name">Ejemplario</string>

    Main
    <string name="btn1Main">Componentes basicos</string>
    <string name="btn2Main">Fragments</string>

    Componentes basicos
    <string name="btn1Comp">Mandar objeto</string>
    <string name="et1">String 1</string>
    <string name="checkb">Verdadero</string>
    <string name="rb1">Radio button 1</string>
    <string name="rb2">Radio button 2</string>

    Fragments
    <string name="tab1">Formulario</string>
    <string name="tab2">Contenido</string>
    <string name="tab3">Informacion</string>

    BaseDeDatos
    <string name="tb_nomrbe">Nombre</string>
    <string name="tb_apellido">Apellido</string>
    <string name="tb_edad">Edad</string>
    <string name="btn_mostrar">Mostrar</string>
    <string name="btn_mandar">Enviar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
